--- a/style.css
+++ b/style.css
@@ -1,3 +1,69 @@
-.tile {
+:root {
+    --color-background: #a2c7e5;
+    --tile-padding: 16px;
+}
+
+#wrapper {
+    width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#tiles {
+    display: none;
+}
+
+#legend {
+    display: inline-block;
+    overflow-y: scroll;
+    width: calc(30% - var(--tile-padding) * 2);
+    height: 200px;
+    top: 0;
+    left: 0;
+    background-color: var(--color-background);
+    padding: var(--tile-padding);
+    margin-top: var(--tile-padding);
+}
+
+#grid-wrapper {
+    display: inline-block;
+    width: calc(100% - var(--tile-padding) * 2);
+    height: 600px;
+    background-color: var(--color-background);
+    padding: var(--tile-padding);
+}
+
+#grid {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.grid-tile {
+    position: absolute;
     background-image: url("tiles.png");
+}
+
+.grid-tile.unset {
+    background-image: none;
+}
+
+.grid-tile.unset:hover {
+    cursor: pointer;
+    background-image: url("select.png");
+}
+
+.legend-entry {
+    background-image: url("tiles.png");
+    float: left;
+}
+
+.legend-entry.selected .overlay {
+    background-image: url("select.png");
+}
+
+.legend-entry:hover .overlay {
+    cursor: pointer;
+    background-image: url("select.png");
 }
