--- a/sentences/style.css
+++ b/sentences/style.css
@@ -1,5 +1,10 @@
 #wrapper {
-    width: 1100px;
+    width: 800px;
     margin-left: auto;
     margin-right: auto;
+}
+
+#text {
+    width: 100%;
+    height: 128px;
 }
