--- a/sentences/style.css
+++ b/sentences/style.css
@@ -1,10 +1,68 @@
+:root {
+    --margin: 4px;
+    --padding: 4px;
+}
+
 #wrapper {
-    width: 800px;
+    width: 1000px;
     margin-left: auto;
     margin-right: auto;
+}
+
+#graph {
+    width: calc(100% - 2px);
+    height: 320px;
+    border: 1px solid gray;
+    overflow: scroll;
+    white-space: nowrap;
+    position: relative;
+}
+
+#graph svg {
+    pointer-events: none;
+    position: absolute;
+    z-index: -1;
+}
+
+#graph .options {
+    display: inline-block;
+    margin: var(--margin);
+    margin-right: 40px;
+    padding: var(--padding);
+    vertical-align: top;
+}
+
+#graph .options .word {
+    cursor: pointer;
+    width: 100%;
+    margin: var(--margin);
+    padding: var(--padding);
+    background-color: #CACACA;
+    text-align: center;
+}
+
+#graph .options .word:hover {
+    background-color: #EAEAEA;
+}
+
+#graph .options .word.chosen {
+    cursor: auto;
+    background-color: #FACDCA;
 }
 
 #text {
     width: 100%;
     height: 128px;
+    margin-top: var(--margin);
+    margin-bottom: var(--margin);
+    resize: none;
+    box-sizing: border-box;
+}
+
+#sources {
+    margin: var(--margin);
+}
+
+#controls {
+    margin: var(--margin);
 }
