--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
     --margin: 4px;
     --padding: 4px;
+    --chat-margin: 10%;
 }
 
 #wrapper {
@@ -54,6 +55,36 @@
     background-color: #EAEAEA;
 }
 
+#chat {
+    height: 300px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid gray;
+    margin-top: var(--margin);
+    margin-bottom: var(--margin);
+    overflow: scroll;
+    float: left;
+}
+
+#chat .message {
+    background-color: #6EBD71;
+    margin: var(--margin);
+    padding: 8px;
+    clear: both;
+    border-radius: 8px;
+}
+
+#chat .message.left {
+    float: left;
+    margin-left: var(--chat-margin);
+}
+
+#chat .message.right {
+    float: right;
+    margin-right: var(--chat-margin);
+}
+
 #text {
     width: 100%;
     height: 128px;
@@ -67,6 +98,14 @@
     margin: var(--margin);
 }
 
-#controls {
-    margin: var(--margin);
+#sources select {
+    width: 100%;
+}
+
+#controls input {
+    width: 100%;
+}
+
+#controls button {
+    width: 100%;
 }
